# MatrixOpPerfCuda

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  perf.txt
include/xitren/cuda/: gemm_utils.cuh  gemm_v00.cuh  gemm_v01.cuh  gemm_v02.cuh  gemm_v03.cuh  gemm_v04.cuh  gemm_v05.cuh  gemm_v06.cuh  general.cuh
include/xitren/math/: branchless.hpp  gemm_core.hpp  matrix_alignment.hpp
src/: gemm_test.cu  measure.cuh
